--- a/mi_biblioteca_proyecto/catalog/templates/catalog/index.html
+++ b/mi_biblioteca_proyecto/catalog/templates/catalog/index.html
@@ -11,11 +11,7 @@
         <input type="text" id="searchInput" placeholder="Buscar autor o titulo">
 
         <select id="generoSelect">
-            <option value="">Todos los géneros</option>
-            <option value="Fantasía">Fantasía</option>
-            <option value="Ciencia ficción">Ciencia ficción</option>
-            <option value="Drama">Drama</option>
-            <option value="Comedia">Comedia</option>
+            <option value="">Género</option>
         </select>
 
        <div class="filtro-rango">
@@ -25,7 +21,7 @@
             <input type="range" id="maxPag" min="1" max="1500" value="1500" step="1">
         </div>
 
-        <button onclick="cargarLibros()">Filtrar</button>
+        <button class="filtrar" onclick="cargarLibros()">Filtrar</button>
     </div>
 
     <h1>📚 Biblioteca</h1>
@@ -34,13 +30,14 @@
         <table id="tabla-libros">
             <thead>
                 <tr>
-                    <th>Título</th>
-                    <th>Autor</th>
-                    <th>Género</th>
-                    <th>Nº Páginas</th>
+                    <th class="ordenable" data-campo="titulo">Título <span class="flecha">⇄</span></th>
+                    <th class="ordenable" data-campo="autor_nombre">Autor <span class="flecha">⇄</span></th>
+                    <th class="ordenable" data-campo="genero">Género <span class="flecha">⇄</span></th>
+                    <th class="ordenable" data-campo="paginas">Nº Páginas <span class="flecha">⇄</span></th>
                     <th>Acciones</th>
                 </tr>
             </thead>
+
             <tbody>
                 {% for l in libros %}
                 <tr>
