corregido desplegable de filtros de género

--- a/mi_biblioteca_proyecto/catalog/templates/catalog/index.html
+++ b/mi_biblioteca_proyecto/catalog/templates/catalog/index.html
@@ -10,9 +10,11 @@
     <div class="filtros" >
         <input type="text" id="searchInput" placeholder="Buscar autor o titulo">
 
-        <select id="generoSelect">
+        
+        <select id="filtroGenero">
             <option value="">Género</option>
         </select>
+
 
        <div class="filtro-rango">
             <label>Páginas: <span id="minPagValue">1</span> - <span id="maxPagValue">1000</span></label>
